--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
-
 </body>
 </html>
