--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script src="js/util.js"></script>
+<script src="js/colorGenerator.js"></script>
+<script src="js/heroGenerator.js"></script>
+<script src="js/move.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
