--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
   </div>
 </template>
 <script src="js/util.js"></script>
+<script src="js/error.js"></script>
 <script src="js/colorGenerator.js"></script>
 <script src="js/heroGenerator.js"></script>
 <script src="js/move.js"></script>
