--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
 <script src="js/util.js"></script>
 <script src="js/error.js"></script>
 <script src="js/colorGenerator.js"></script>
-<script src="js/heroGenerator.js"></script>
+<script src="js/data.js"></script>
 <script src="js/move.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/backend.js"></script>
