--- a/index.html
+++ b/index.html
@@ -188,15 +188,6 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-<script src="js/util.js"></script>
-<script src="js/error.js"></script>
-<script src="js/colorGenerator.js"></script>
-<script src="js/move.js"></script>
-<script src="js/wizard.js"></script>
-<script src="js/setup.js"></script>
-<script src="js/stat.js"></script>
-<script src="js/backend.js"></script>
-<script src="js/main.js"></script>
-<script src="js/game.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
